Updated the about me text

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           </p>
 
           <p>
-            Currently, I am working on a project which deals with simulation of Hyperspectral data with the help of Machine Learning techniques. During my graduate studies, I have also worked on projects dealing with Natural Language Processing and Computer Vision.
+            During my graduate studies, I implemented Machine Learning techniques for hyperspectral data simulation. I have also worked on projects dealing with Natural Language Processing and Computer Vision. Currently, I am working as a Computational/Data Scientist at Simreka Softwares.
           </p>
         </section>
 
