--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.linkedin.com/in/awasthimohit/" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://github.com/awasthimohit1" class="social-link">
               <ion-icon name="logo-Github"></ion-icon>
             </a>
           </li>
