--- a/index.html
+++ b/index.html
@@ -765,14 +765,14 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://github.com/awasthimohit1/Project_work">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/ai_bot.png" alt="AI Chatbot" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Finance</h3>
