--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           <h1 class="name" title="Mohit Awasthi">Mohit Awasthi</h1>
 
           <p class="title">Data Scientist</p>
+          <p class="title">ML Engineer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -116,7 +117,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Agra, Uttar Pradesh, India</address>
+              <address>Bengaluru, India</address>
             </div>
 
           </li>
@@ -178,7 +179,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
+            <button class="navbar-link" data-nav-link>Projects</button>
           </li>
 
           <li class="navbar-item">
@@ -186,7 +187,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Contact</button>
+            <button class="navbar-link" data-nav-link>Contact me</button>
           </li>
 
         </ul>
@@ -209,12 +210,13 @@
 
         <section class="about-text">
           <p>
-            I'm a Data Science and Machine Learning enthusiast from India, currently pursuing my master's in Water Resources at Indian Institute of Science.
+            I'm a Data Science and Machine Learning enthusiast from India, currently working as a Computational Scientist at Simreka Softwares.
             I like solving complex but interesting problems to deliver value and eventually create value. I believe data-driven decision-making has the potential to revolutionize the world for good.
           </p>
 
           <p>
-            During my graduate studies, I implemented Machine Learning techniques for hyperspectral data simulation. I have also worked on projects dealing with Natural Language Processing and Computer Vision. Currently, I am working as a Computational/Data Scientist at Simreka Softwares.
+            My work includes handling client projects, developing machine learning pipelines, developing in-house Generative AI based tool, etc. I have experience in delivering data driven solutions from raw data to ML model deployment. 
+            In my graduate studies, I implemented Machine Learning techniques for hyperspectral data simulation. I have also worked on projects dealing with Natural Language Processing and Computer Vision.
           </p>
         </section>
 
@@ -237,10 +239,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Data Wrangling</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Working with client provided raw datasets and extract meaning full insights.
                 </p>
               </div>
 
@@ -253,10 +255,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">ML Model Development</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Robust data driven ML models for predictive analysis.
                 </p>
               </div>
 
@@ -269,10 +271,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Prompt Engineering</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Improving LLM performance by deploying various prompt engineering techniques.
                 </p>
               </div>
 
@@ -285,10 +287,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">Fine-tuning LLMs</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  Taking LLM performance a notch above with fine-tuning on custom datasets.
                 </p>
               </div>
 
@@ -458,8 +460,8 @@
           <ul class="clients-list has-scrollbar">
 
             <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-1-color.png" alt="client logo">
+              <a href="https://github.com/awasthimohit1/IBM-Data-Science-Capstone">
+                <img src="./assets/images/ai_bot.png" alt="client logo">
               </a>
             </li>
 
@@ -532,9 +534,12 @@
               <span>2021 — 2023</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                <h6>Project Title</h6><br> 
+                <h5>Hyperspectral data simulation from Multispectral data using ML techniques</h5><br>
+                Acquired and processed raw Sentinel-2 & AVIRIS NG data using Google Earth Engine and NASA JPL database<br>
+                Extracted data and performed data wrangling using GDAL & Pandas<br>
+                Analyzed and visualized data, and developed ML models in R<br>
+                Utilized multiple ML algorithms like Linear Regression, Neural Network, Random Forest, and CNN to solve the research problem & achieved conclusive results 
               </p>
 
             </li>
@@ -546,8 +551,6 @@
               <span>2013 — 2017</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
               </p>
 
             </li>
@@ -559,9 +562,6 @@
               <span>2007 - 2013</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
               </p>
 
             </li>
@@ -584,14 +584,17 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Computational Scientist</h4>
+              <h5 class="h5 timeline-item-title">Simreka Softwares Pvt. Ltd.</h5>
 
-              <span>2015 — Present</span>
+              <span>2023 — Present</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                Performed data pre-processing and statistical analysis using Python & R<br>
+                Developed end-to-end machine learning pipelines for client projects<br>
+                Collaborated seamlessly with clients to understand unique requirements, ensuring tailor-made solutions<br>
+                Utilized Git for versioning, streamlined collaboration, and fostering efficient teamwork on diverse projects<br>
+                Developed an in-house tool using open-source LLMs (Llama 2, and Mistral) locally using Langchain implementation and refined the results with prompt engineering
               </p>
 
             </li>
@@ -650,7 +653,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
+                <h5 class="h5">Python</h5>
                 <data value="70">70%</data>
               </div>
 
@@ -663,12 +666,12 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
+                <h5 class="h5">SQL</h5>
+                <data value="70">70%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
+                <div class="skill-progress-fill" style="width: 70%;"></div>
               </div>
 
             </li>
